# edu-ml-test

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml
.claude/: settings.local.json
examples/: demo_image_classifier.py  demo_pose.py
src/kc/: __init__.py  camera.py  errors.py  models.py  movenet.py  predict.py  result.py
src/kc/_weights/: __init__.py
tests/: test_smoke.py
