[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kc-lib"
version = "0.0.1"
description = "Machine learning for Python beginners. Webcam, image classification, and pose detection with Teachable Machine models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.15"
authors = [{ name = "kindercode" }]
keywords = ["education", "machine-learning", "teachable-machine", "kids", "tflite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ai-edge-litert>=1.0.1",
    "opencv-python>=4.8.0",
    "numpy>=1.24,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/wshang99/edu-ml-test"
Issues = "https://github.com/wshang99/edu-ml-test/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kc"]

[tool.hatch.build.targets.sdist]
include = ["src/kc", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
